<resources>
    <string name="app_name">WeDo</string>

    <string name="main_title">Customer List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_condition">Accept Terms And Conditions</string>
    <string name="registration">Registration</string>
    <string name="user_name_and_email">User Name and Email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>

    <string name="search">Search</string>
    <string name="customer">Customer</string>
    <string name="payment">Payment</string>
    <string name="back">Back</string>
    <string name="qty">Qty</string>
    <string name="disc">Disc</string>
    <string name="price">Price</string>
</resources>
