<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginVM"
            type="uz.minmax.sampledaggerapp.ui.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/app_logo_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                app:layout_constraintVertical_bias="0.4"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@android:drawable/star_on"
                tools:srcCompat="@android:drawable/star_on" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/sign_in"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toTopOf="@+id/user_name_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_logo_view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_and_email"
                    android:text=""/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/user_name_view"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:onClick="@{()->loginVM.forgotPasswordClick()}"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_password_view" />

            <Button
                android:id="@+id/login_button_view"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:onClick="@{()->loginVM.signInClick()}"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/sign_up_view"
                android:onClick="@{()->loginVM.signUpClick()}"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/login_button_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:text="@string/create_new_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>